--- a/index.html
+++ b/index.html
@@ -6,12 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- css file -->
     <link href="./dist/output.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+        integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 
-<body>
-    <!-- header -->
-     <h1 class="bg-red-300 text-4xl  ">project setup done</h1>
+<body class="inter">
+    <!--================================ HEADER SECTION START =========================================== -->
+    <header>
+        <!-- navbar -->
+        <nav class=" container mx-auto px-5 mt-9 flex justify-between items-center">
+            <!-- nab logo -->
+            <img src="./assets/logo.png" alt="logo" class="w-full max-w-34">
+            <!-- nav links -->
+            <ul class="gap-12 hidden sm:flex">
+                <li><a href="#" class="transition-[0.7s] font-medium  hover:text-[#8987A1]">Home</a></li>
+                <li><a href="#" class="transition-[0.7s] font-medium  hover:text-[#8987A1]">Shop</a></li>
+                <li><a href="#" class="transition-[0.7s] font-medium  hover:text-[#8987A1]">About us</a></li>
+                <li><a href="#" class="transition-[0.7s] font-medium  hover:text-[#8987A1]"><i
+                            class="fa-solid fa-cart-arrow-down"></i> Cart ($56)</a></li>
+            </ul>
+            <!-- toggle menu -->
+            <div class="sm:hidden">
+                <i class="fa-solid fa-bars text-5xl "></i>
+            </div>
+        </nav>
+    </header>
+    <!--================================ HEADER SECTION END =========================================== -->
+
+
+
+    <!--================================ MAIN SECTION START =========================================== -->
+    <main></main>
+    <!--================================ MAIN SECTION END =========================================== -->
+
+
+
+    <!--================================ FOOTER SECTION START =========================================== -->
+    <footer></footer>
+    <!--================================ FOOTER SECTION END =========================================== -->
+
 </body>
 
 </html>
