complite our section header

--- a/index.html
+++ b/index.html
@@ -38,20 +38,39 @@
     <!--================================ MAIN SECTION START =========================================== -->
     <main>
         <!-- ----------------------------------- hero section start---------------------- -->
-        <section class="">
-            <div class="container mx-auto px-5 justify-between items-end sm:flex sm:justify-between sm:items-center sm:gap-5 xl:flex-row-reverse xl:items-end xl:mt-30">
+        <section>
+            <div
+                class="container mx-auto px-5 justify-between items-end sm:flex sm:justify-between sm:items-center sm:gap-5 xl:flex-row-reverse xl:items-end xl:mt-30">
                 <!-- hero image -->
                 <img src="./assets/hero-flower.png" alt="hero image" class="sm:max-w-3/5 xl:w-full">
 
                 <!-- hero content -->
                 <div class="max-w-90 mt-7 sm:w-2/5 xl:max-w-full">
-                    <h1 class="text-2xl font-bold color-primary sm:text-3xl md:text-5xl xl:text-6xl">ALWAYS FRESH <span class="text-secondary">FLOWERS</span></h1>
-                    <p class="text-rgb-text mt-3 xl:text-2xl">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+                    <h1 class="text-2xl font-bold color-primary sm:text-3xl md:text-5xl xl:text-6xl">ALWAYS FRESH <span
+                            class="text-secondary">FLOWERS</span></h1>
+                    <p class="text-rgb-text mt-3 xl:text-2xl">Indulge your senses with the beauty and fragrance of our
+                        fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers
+                        that are perfect for any occasion. </p>
                 </div>
-                
+
             </div>
         </section>
         <!-- ----------------------------------- hero section end---------------------- -->
+
+        <!-- ----------------------------------- our plant section start---------------------- -->
+        <section>
+            <!-- our plant header -->
+            <div class="container mx-auto px-5">
+                <div class="section-header-container ">
+                    <h1 class="section-header-title align-middle">Our <span class="text-primary ">Plants</span></h1>
+                    <p class="section-header-tagline">Indulge your senses with the beauty and fragrance of our fresh
+                        flower
+                        shop. From classic roses to exotic blooms, we offer a wide variety of fresh. </p>
+                </div>
+            </div>
+        </section>
+        <!-- ----------------------------------- our plant section end---------------------- -->
+
 
     </main>
     <!--================================ MAIN SECTION END =========================================== -->
