complite our plant card section

--- a/index.html
+++ b/index.html
@@ -67,6 +67,79 @@
                         flower
                         shop. From classic roses to exotic blooms, we offer a wide variety of fresh. </p>
                 </div>
+
+                <!-- our plant cards -->
+                <div class="grid grid-cols-2 gap-x-5 gap-y-7 mt-5 mb-20 sm:grid-cols-3 xl:grid-cols-4 xl:mt-12">
+
+                    <div class="plant-card">
+                        <img src="./assets/sample-flower-image.png" alt="simole fliwer image" class="w-full">
+                        <div class="text-center">
+                            <p class="text-[16px] text-primary font-medium">Lily Blossom</p>
+                            <p class="text-[16px] font-bold text-primary ">20 USD</p>
+                        </div>
+                        <a class="button" href="#">add to cart</a>
+                    </div>
+
+                    <div class="plant-card">
+                        <img src="./assets/sample-flower-image.png" alt="simole fliwer image" class="w-full">
+                        <div class="text-center">
+                            <p class="text-[16px] text-primary font-medium">Lily Blossom</p>
+                            <p class="text-[16px] font-bold text-primary ">20 USD</p>
+                        </div>
+                        <a class="button" href="#">add to cart</a>
+                    </div>
+                    <div class="plant-card">
+                        <img src="./assets/sample-flower-image.png" alt="simole fliwer image" class="w-full">
+                        <div class="text-center">
+                            <p class="text-[16px] text-primary font-medium">Lily Blossom</p>
+                            <p class="text-[16px] font-bold text-primary ">20 USD</p>
+                        </div>
+                        <a class="button" href="#">add to cart</a>
+                    </div>
+
+                    <div class="plant-card">
+                        <img src="./assets/sample-flower-image.png" alt="simole fliwer image" class="w-full">
+                        <div class="text-center">
+                            <p class="text-[16px] text-primary font-medium">Lily Blossom</p>
+                            <p class="text-[16px] font-bold text-primary ">20 USD</p>
+                        </div>
+                        <a class="button" href="#">add to cart</a>
+                    </div>
+                    <div class="plant-card">
+                        <img src="./assets/sample-flower-image.png" alt="simole fliwer image" class="w-full">
+                        <div class="text-center">
+                            <p class="text-[16px] text-primary font-medium">Lily Blossom</p>
+                            <p class="text-[16px] font-bold text-primary ">20 USD</p>
+                        </div>
+                        <a class="button" href="#">add to cart</a>
+                    </div>
+
+                    <div class="plant-card">
+                        <img src="./assets/sample-flower-image.png" alt="simole fliwer image" class="w-full">
+                        <div class="text-center">
+                            <p class="text-[16px] text-primary font-medium">Lily Blossom</p>
+                            <p class="text-[16px] font-bold text-primary ">20 USD</p>
+                        </div>
+                        <a class="button" href="#">add to cart</a>
+                    </div>
+                    <div class="plant-card">
+                        <img src="./assets/sample-flower-image.png" alt="simole fliwer image" class="w-full">
+                        <div class="text-center">
+                            <p class="text-[16px] text-primary font-medium">Lily Blossom</p>
+                            <p class="text-[16px] font-bold text-primary ">20 USD</p>
+                        </div>
+                        <a class="button" href="#">add to cart</a>
+                    </div>
+
+                    <div class="plant-card">
+                        <img src="./assets/sample-flower-image.png" alt="simole fliwer image" class="w-full">
+                        <div class="text-center">
+                            <p class="text-[16px] text-primary font-medium">Lily Blossom</p>
+                            <p class="text-[16px] font-bold text-primary ">20 USD</p>
+                        </div>
+                        <a class="button" href="#">add to cart</a>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- ----------------------------------- our plant section end---------------------- -->
