--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
 
                 <!-- our plant cards -->
-                <div class="grid grid-cols-2 gap-x-5 gap-y-7 mt-5 mb-20 sm:grid-cols-3 xl:grid-cols-4 xl:mt-12">
+                <div class="grid grid-cols-2 gap-x-5 gap-y-7 mt-5  sm:grid-cols-3 xl:grid-cols-4 xl:mt-12">
 
                     <div class="plant-card">
                         <img src="./assets/sample-flower-image.png" alt="simole fliwer image" class="w-full">
@@ -143,6 +143,40 @@
             </div>
         </section>
         <!-- ----------------------------------- our plant section end---------------------- -->
+
+        <!-- ----------------------------------- trusted-badge section end---------------------- -->
+        <section >
+            <div class="container mt-10 mx-auto px-5 sm:mt-30  sm:flex sm:gap-10 sm:items-center">
+                <!-- section image -->
+                <div class="sm:w-1/2 relative">
+                    <img class="w-full h-auto  object-cover" src="./assets/flower-store.png" alt="flower store">
+
+                    <img class="hidden sm:block absolute top-[-70px] right-[-50px] w-[200px] " src="./assets/trusted-badge.png"
+                        alt="trusted-badge">
+                </div>
+                <!-- section content -->
+                <div class="sm:w-1/2">
+                    <h3 class="font-bold text-2xl mb-4 mt-5 md:text-4xl xl:text-5xl">Flower & Plants Lover</h3>
+                    <ul class="list-disc ml-5 flex flex-col gap-4">
+                        <li class="text-rgb-text md:text-[18px] xl:text-2xl ">Indulge your senses with the beauty and
+                            fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide
+                            variety of fresh.</li>
+
+                        <li class="text-rgb-text md:text-[18px] xl:text-2xl ">Indulge your senses with the beauty and
+                            fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide
+                            variety of fresh.</li>
+
+                        <li class="text-rgb-text md:text-[18px] xl:text-2xl ">Indulge your senses with the beauty and
+                            fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide
+                            variety of fresh.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- ----------------------------------- trusted-badge section end---------------------- -->
+
 
 
     </main>
