complite last deal section

--- a/index.html
+++ b/index.html
@@ -144,15 +144,18 @@
         </section>
         <!-- ----------------------------------- our plant section end---------------------- -->
 
-        <!-- ----------------------------------- trusted-badge section end---------------------- -->
-        <section >
-            <div class="container mt-10 mx-auto px-5 sm:mt-30  sm:flex sm:gap-10 sm:items-center">
+        <!-- ----------------------------------- trusted badge section start---------------------- -->
+        <section>
+            <div class="container mt-10 mx-auto px-5 sm:mt-30  sm:flex sm:justify-between sm:gap-18 sm:items-center">
                 <!-- section image -->
-                <div class="sm:w-1/2 relative">
-                    <img class="w-full h-auto  object-cover" src="./assets/flower-store.png" alt="flower store">
+                <div class="sm:w-1/2 ">
+                    <div class="relative sm:max-w-[480px] sm:max-h-[480px] xl:max-w-[560px] xl:max-h-[450px]">
+                        <img class="w-full h-auto object-cover sm:max-w-[480px] sm:max-h-[480px] xl:max-w-[560px] xl:max-h-[450px]"
+                            src="./assets/flower-store.jpg" alt="flower store">
 
-                    <img class="hidden sm:block absolute top-[-70px] right-[-50px] w-[200px] " src="./assets/trusted-badge.png"
-                        alt="trusted-badge">
+                        <img class="hidden sm:block absolute top-[-70px] right-[-100px] w-[200px] "
+                            src="./assets/trusted-badge.png" alt="trusted-badge">
+                    </div>
                 </div>
                 <!-- section content -->
                 <div class="sm:w-1/2">
@@ -173,9 +176,50 @@
                 </div>
             </div>
         </section>
+        <!-- ----------------------------------- trusted badge section end---------------------- -->
 
 
-        <!-- ----------------------------------- trusted-badge section end---------------------- -->
+        <!-- ----------------------------------- latest deals section start---------------------- -->
+        <section>
+            <div class="container mx-auto px-5">
+                <!-- latest deals header -->
+                <div class="section-header-container ">
+                    <h1 class="section-header-title align-middle">Latest <span class="text-primary ">Deals</span></h1>
+                    <p class="section-header-tagline">Indulge your senses with the beauty and fragrance of our fresh
+                        flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh. </p>
+                </div>
+
+                <!-- image galyry -->
+                <div class="mt-19 grid gap-5 sm:grid-cols-12">
+
+                    <div class="bg-[linear-gradient(to_right,rgba(0,0,0,0.60),rgba(0,0,0,0.30)),url('/assets/deal-bloom.png')]
+                bg-no-repeat bg-cover
+                rounded-xl text-center p-17 sm:col-span-6 xl:col-span-4 xl:row-span-1 xl:order-1">
+                        <h3 class="text-white font-bold text-xl mb-7">60% Off | Bloom Plant</h3>
+                        <p class="text-[16px] text-white font-semibold underline">Shop Now</p>
+                    </div>
+
+
+                    <div class="bg-[linear-gradient(to_right,rgba(0,0,0,0.60),rgba(0,0,0,0.30)),url('/assets/deal-ana.png')]
+                bg-no-repeat bg-cover
+                rounded-xl text-center p-17 sm:col-span-6  xl:col-span-4 xl:row-span-1 xl:order-3">
+                        <h3 class="text-white font-bold text-xl mb-7">30% Off | Ana Plant</h3>
+                        <p class="text-[16px] text-white font-semibold underline">Shop Now</p>
+                    </div>
+
+                    <div class="bg-[linear-gradient(to_right,rgba(0,0,0,0.60),rgba(0,0,0,0.30)),url('/assets/deal-zabo.png')]
+                bg-no-repeat bg-cover
+                rounded-xl text-center p-17 flex justify-center items-center sm:col-span-12 sm:col-row-2 xl:col-span-8 xl:row-span-2 xl:order-2">
+                        <div>
+                            <h3 class="text-white font-bold text-xl mb-7 sm:text-4xl">25% Off | Zabo Plant</h3>
+                            <p class="text-[16px] text-white font-semibold underline sm:text-3xl">Shop Now</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- ----------------------------------- latest deals section end---------------------- -->
 
 
 
